Add footer tablet styles

--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
         </form>
       </section>
       <section
-        class="px-12 xl:px-[9.3rem] lg:px-28 lg:py-40 py-28 xl:pt-40 xl:pb-32"
+        class="px-12 xl:px-[9.3rem] lg:px-28 lg:py-40 py-28 xl:pt-40 xl:pb-32 lg:pb-[7.5rem]"
       >
         <div
           class="flex flex-col xl:grid xl:grid-cols-2 lg:grid lg:grid-cols-2"
@@ -367,53 +367,97 @@
         </div>
       </section>
     </main>
-    <footer class="grid grid-cols-2 xl:px-24 px-4 bg-black-200">
+    <footer class="grid grid-cols-2 xl:px-24 px-4 lg:px-20 bg-black-200">
       <div
-        class="hidden xl:grid xl:w-[55rem] xl:grid-cols-5 text-white font-GT-America"
+        class="hidden xl:grid xl:w-[55rem] xl:grid-cols-5 lg:grid lg:w-[41.6rem] lg:grid-cols-5 text-white font-GT-America"
       >
-        <div class="flex flex-col font-semibold xl:font-medium mt-11">
-          <p class="text-[1.51rem] xl:text-2xl xl:font-semibold">Abstract</p>
-          <a class="mt-2 xl:mt-4 text-[1.08rem] xl:text-[.97rem]" href="#"
+        <div
+          class="flex flex-col font-semibold lg:font-medium xl:font-medium mt-11 lg:mt-12"
+        >
+          <p
+            class="text-[1.51rem] xl:text-2xl xl:font-semibold lg:font-semibold"
+          >
+            Abstract
+          </p>
+          <a
+            class="mt-2 xl:mt-4 lg:mt-3 text-[1.08rem] lg:text-base xl:text-[.97rem]"
+            href="#"
             >Start Trial</a
           >
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Pricing</a>
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Download</a>
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >Pricing</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >Download</a
+          >
         </div>
         <div class="flex flex-col mt-11">
           <p class="text-[1.51rem] xl:text-2xl font-semibold">Resources</p>
-          <a class="mt-2 xl:mt-4 text-[1.08rem] xl:text-[.97rem]" href="#"
+          <a
+            class="mt-2 xl:mt-4 text-[1.08rem] lg:mt-3 xl:text-[.97rem] lg:text-base"
+            href="#"
             >Blog</a
           >
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Help Center</a>
-          <a class="text-[1.08rem] xl:text-[.97rem]" text-xl href="#"
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >Help Center</a
+          >
+          <a
+            class="text-[1.08rem] xl:text-[.97rem] lg:text-base"
+            text-xl
+            href="#"
             >Release Notes</a
           >
-          <a class="text-[1.08rem] xl:text-[.97rem]" text-xl href="#">Status</a>
+          <a
+            class="text-[1.08rem] xl:text-[.97rem] lg:text-base"
+            text-xl
+            href="#"
+            >Status</a
+          >
         </div>
         <div class="flex flex-col mt-11">
           <p class="text-[1.51rem] xl:text-2xl font-semibold">Community</p>
-          <a class="mt-2 xl:mt-4 text-[1.08rem] xl:text-[.97rem]" href="#"
+          <a
+            class="mt-2 xl:mt-4 text-[1.08rem] xl:text-[.97rem] lg:mt-3 lg:text-base"
+            href="#"
             >Twitter</a
           >
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">LinkedIn</a>
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Facebook</a>
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Dribble</a>
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Podcast</a>
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >LinkedIn</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >Facebook</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >Dribble</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >Podcast</a
+          >
         </div>
         <div class="flex flex-col mt-11">
           <p class="text-[1.51rem] xl:text-2xl font-semibold">Company</p>
           <a
-            class="text-[1.08rem] mt-2 xl:mt-4 hr-[1.08rem] xl:text-[.97rem]"
+            class="text-[1.08rem] lg:text-base mt-2 xl:mt-4 hr-[1.08rem] lg:mt-3 xl:text-[.97rem]"
             href="#"
             >About Us</a
           >
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Careers</a>
-          <a class="text-[1.08rem] xl:text-[.97rem]" href="#">Legal</a>
-          <p class="mt-7 text-[1.1rem] xl:text-base font-bold">Contact Us</p>
-          <a class="text-[1.08rem] xl:text-sm" href="#">info@abstract.com</a>
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >Careers</a
+          >
+          <a class="text-[1.08rem] xl:text-[.97rem] lg:text-base" href="#"
+            >Legal</a
+          >
+          <p class="mt-7 text-[1.1rem] xl:text-base lg:text-base font-bold">
+            Contact Us
+          </p>
+          <a class="text-[1.08rem] xl:text-sm lg:text-base" href="#"
+            >info@abstract.com</a
+          >
         </div>
       </div>
-      <div class="w-64 mt-10 xl:mt-48 xl:ml-[20.4rem] text-white">
+      <div
+        class="w-64 mt-10 xl:mt-48 xl:ml-[20.4rem] lg:mt-48 lg:mb-[3.75rem] lg:ml-[11.5rem] text-white"
+      >
         <div class="w-9 h-9">
           <svg
             viewBox="0 0 18 18"
