fix navbar spacing styles mobile

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body class="h-screen debug-screens font-GT-America">
     <header class="text-white">
       <nav
-        class="flex w-full py-5 bg-black-200 xl:py-[1.18rem] lg:py-5 xl:px-20 lg:px-[3.8rem]"
+        class="flex w-full py-6 bg-black-200 xl:py-[1.18rem] lg:py-5 xl:px-20 lg:px-[3.8rem]"
         id="navbar"
       >
         <ul class="flex flex-row">
@@ -74,9 +74,8 @@
             </a>
           </li>
           <li class="flex items-center">
-            <span class="text-[2rem] ml-[.47rem] mr-[.55rem] font-thin">|</span>
             <a
-              class="mt-[.35rem] xl:mt-[.3rem] lg:mr-[26rem] text-[1.45rem] font-medium"
+              class="mt-[.35rem] xl:mt-[.3rem] border-l-2 ml-1 pl-2 lg:mr-[26rem] text-[1.45rem] font-medium"
               href="./index.html"
               >Help Center</a
             >
@@ -84,7 +83,7 @@
         </ul>
         <button>
           <div
-            class="mt-[.65rem] lg:mt-3 xl:hidden ml-[5.5rem] lg:mr-1 lg:ml-32 mr-[.5rem] w-8 h-8"
+            class="mt-[.65rem] lg:mt-3 xl:hidden ml-3 lg:mr-1 lg:ml-32 mr-1 w-8 h-8"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -119,7 +118,7 @@
             <svg
               id="menu-open"
               xmlns="http://www.w3.org/2000/svg"
-              class="mt-[.4rem] lg:mt-[.1rem] xl:hidden"
+              class="mt-1 lg:mt-[.1rem] xl:hidden"
               viewBox="0 0 23 23"
               fill="none"
               stroke="currentColor"
