Add nav menu styles mobile

--- a/public/index.html
+++ b/public/index.html
@@ -183,17 +183,17 @@
         </div>
       </nav>
       <div
-        class="hidden bg-black border-t-[1px] border-gray w-full lg:h-[13.25rem]"
+        class="hidden bg-black border-t-[1px] border-gray w-full lg:h-[13.25rem] h-52"
         id="nav-menu"
       >
         <div
-          class="place-self-center lg:flex lg:flex-col lg:justify-center lg:items-center"
+          class="place-self-center flex lg:flex-col flex-col lg:justify-center lg:items-center"
         >
-          <a class="text-white text-2xl lg:pb-4 font-normal" href="#"
+          <a class="text-white text-2xl lg:pb-4 pb-4 font-normal" href="#"
             >Submit a request</a
           >
           <a
-            class="text-white text-center lg:pt-4 text-2xl border-t-[1px] lg:w-[31rem] font-thin border-gray"
+            class="text-white text-center lg:pt-4 pt-4 text-2xl border-t-[1px] lg:w-[31rem] w-[10.5rem] font-thin border-gray"
             href="#"
             >Sign in</a
           >
