--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
   <body class="h-screen debug-screens font-GT-America">
     <header class="text-white">
       <nav
-        class="flex w-full py-6 bg-black-200 xl:py-[1.18rem] lg:py-5 xl:px-20 lg:px-[3.8rem]"
+        class="flex w-full justify-center items-center py-4 px-5 bg-black-200 xl:py-[1.18rem] lg:py-5 2xl:px-20 lg:px-[3.8rem]"
         id="navbar"
       >
-        <ul class="flex flex-row">
+        <ul class="flex flex-row mb-1">
           <li class="flex items-center justify-center">
-            <a class="ml-[.85rem]" href="https://www.abstract.com/">
-              <div class="w-[8.15rem] h-9">
+            <a class="2xl:mr-4" href="https://www.abstract.com/">
+              <div class="w-28 h-7 2xl:w-40 2xl:h-12">
                 <svg
                   viewBox="0 -1 73 19"
                   fill="none"
@@ -75,7 +75,7 @@
           </li>
           <li class="flex items-center">
             <a
-              class="mt-[.35rem] xl:mt-[.3rem] border-l-2 ml-1 pl-2 lg:mr-[26rem] text-[1.45rem] font-medium"
+              class="mt-[.35rem] xl:mt-[.3rem] border-l-2 ml-1 pl-2 lg:mr-[26rem] text-xl 2xl:text-3xl 2xl:pl-5 2xl:mr-0 font-medium"
               href="./index.html"
               >Help Center</a
             >
@@ -83,7 +83,7 @@
         </ul>
         <button>
           <div
-            class="mt-[.65rem] lg:mt-3 xl:hidden ml-3 lg:mr-1 lg:ml-32 mr-1 w-8 h-8"
+            class="mt-[.65rem] lg:mt-3 xl:hidden ml-24 lg:mr-1 lg:ml-32 mr-1 size-7"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -114,7 +114,7 @@
           </div>
         </button>
         <button id="menu-btn" onclick="toggleMenu()">
-          <div class="w-7 h-7">
+          <div class="size-6">
             <svg
               id="menu-open"
               xmlns="http://www.w3.org/2000/svg"
@@ -172,7 +172,7 @@
           </div>
         </button>
         <div
-          class="hidden xl:mr-4 rounded-lg justify-center xl:flex items-center xl:h-[3.15rem] border-white border-[1px] bg-[#161616] xl:w-[14.5rem] xl:ml-[28.6rem]"
+          class="hidden 2xl:mr-8 rounded-lg justify-center xl:flex items-center xl:h-[3.15rem] border-white border-[1px] bg-[#161616] xl:w-[14.5rem] xl:ml-[28.6rem]"
         >
           <a class="text-2xl tracking-wide" href="#">Submit a request</a>
         </div>
