Update main section text sizes for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                       fill="#FFFBFB"
                     />
                     <path
-                      d="M8.81232 0.000147151C1.78086 -0.0187525 0.0186013 1.77672 0.000143779 8.9766C-0.0183138 16.1765 1.73428 17.9809 8.76573 17.9999C15.7972 18.0187 17.5603 16.2233 17.5788 9.0234C17.5972 1.82352 15.8437 0.0190468 8.81232 0.000147151ZM7.34719 13.922C6.68167 13.922 6.03119 13.72 5.47788 13.3414C4.92461 12.9628 4.49336 12.4248 4.23869 11.7953C3.98405 11.1658 3.91742 10.473 4.04724 9.80474C4.17706 9.13644 4.4975 8.52264 4.96803 8.04074C5.43857 7.55892 6.03808 7.23082 6.69073 7.0979C7.34346 6.96501 8.01992 7.0332 8.6347 7.29396C9.24949 7.55474 9.77495 7.99632 10.1447 8.56282C10.5144 9.12938 10.7117 9.79553 10.7117 10.4769C10.7105 11.3902 10.3557 12.2658 9.72496 12.9116C9.09421 13.5575 8.23911 13.9208 7.34719 13.922ZM13.4584 13.7807H11.8103V5.90674H4.1197V4.21928H13.4584V13.7807Z"
+                      d="M8.81232 0.000147151C1.78086 -0.0187525 0.0186013 1.77672 0.000143779 8.9766C-0.0183138 16.1765 1.73428 17.9809 8.76573 17.9999C15.7972 18.0187 17.5603 16.2233 17.5788 9.0234C17.5972 1.82352 15.8437 0.0190468 8.81232 0.000147151ZM7.34719 13.922C6.68167 13.922 6.03119 13.72 5.47788 13.3414C4.92461 12.9628 4.49336 12.4248 4.23869 11.7953C3.98405 11.1658 3.91742 10.473 4.04724 9.80474C4.17706 9.13644 4.4975 8.52264 4.96803 8.04074C5.43857 7.55892 6.03808 7.23082 6.69073 7.0979C7.34346 6.96501 8.01992 7.0332 8.6347 7.29396C9.24949 7.55474 9.77495 7.99632 10.1447 8.56282C10.5144 9.12938 10.7117 9.79553 10.7117 10.4769C10.7105 11.3902 10.3557 12.2658 9.72496 12.9116C9.09421 13.5575 8.23911 13.9208 7.34719 13.922ZM13.4584 13.7807h21.8103V5.90674H4.1197V4.21928h23.4584V13.7807Z"
                       fill="white"
                     />
                     <path
@@ -235,7 +235,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                   stroke-width="1.5"
-                  d="M4 12h16m0 0l-6-6m6 6l-6 6"
+                  d="M4 12h26m0 0l-6-6m6 6l-6 6"
                 />
               </svg>
             </button>
@@ -253,12 +253,15 @@
               <img src="./assets/icon-versions.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black 2xl:w-[25rem]">
-              <p
-                class="pb-[.9rem] 2xl:pb-4 text-2xl font-semibold tracking-tight 2xl:tracking-normal"
+              <h2
+                class="pb-[.9rem] 2xl:pb-4 text-xl font-semibold tracking-tight 2xl:tracking-normal"
               >
                 Using Abstract
-              </p>
-              <p class="text-2xl 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
+              </h2>
+
+              <p
+                class="text-lg font-light 2xl:tracking-[.04rem] 2xl:text-[1.4rem]"
+              >
                 Abstract lets you manage, version, and document your designs in
                 one place.
               </p>
@@ -280,12 +283,12 @@
               <img src="./assets/icon-account.png" alt="" />
             </div>
             <div class="flex flex-col w-64 2xl:w-[24rem] text-black">
-              <p
-                class="pb-[.9rem] 2xl:pb-4 text-[1.51rem] font-semibold tracking-tight"
+              <h2
+                class="pb-[.9rem] 2xl:pb-4 text-xl font-semibold tracking-tight"
               >
                 Manage your account
-              </p>
-              <p class="text-2xl 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
+              </h2>
+              <p class="text-lg 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
                 Configure your account settings, such as your email, profile
                 details, and password.
               </p>
@@ -307,12 +310,12 @@
               <img src="./assets/icon-organizations.png" alt="" />
             </div>
             <div class="flex flex-col w-64 2xl:w-[25rem] text-black">
-              <p
-                class="pb-[.9rem] 2xl:pb-4 text-[1.51rem] font-semibold tracking-tight"
+              <h2
+                class="pb-[.9rem] 2xl:pb-4 text-xl font-semibold tracking-tight"
               >
                 Manage organizations, teams, and projects
-              </p>
-              <p class="text-2xl 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
+              </h2>
+              <p class="text-lg 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
                 Use Abstract organizations, teams, and projects to organize your
                 people and your work.
               </p>
@@ -334,12 +337,12 @@
               <img src="./assets/icon-billing.png" alt="" />
             </div>
             <div class="flex flex-col w-64 2xl:w-[23rem] text-black">
-              <p
-                class="pb-[.9rem] 2xl:pb-4 text-[1.51rem] font-semibold tracking-tight"
+              <h2
+                class="pb-[.9rem] 2xl:pb-4 text-xl font-semibold tracking-tight"
               >
                 Manage billing
-              </p>
-              <p class="text-2xl 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
+              </h2>
+              <p class="text-lg 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
                 Change subscriptions and payment details.
               </p>
               <div
@@ -360,12 +363,12 @@
               <img src="./assets/icon-authenticate.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black 2xl:w-96">
-              <p
-                class="pb-[.9rem] 2xl:pb-4 text-[1.51rem] font-semibold tracking-tight"
+              <h2
+                class="pb-[.9rem] 2xl:pb-4 text-xl font-semibold tracking-tight"
               >
                 Authenticate to Abstract
-              </p>
-              <p class="text-2xl 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
+              </h2>
+              <p class="text-lg 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
                 Set up an configure SSO, SCIM, and Just-in-Time provisioning.
               </p>
               <div
@@ -386,12 +389,12 @@
               <img src="./assets/icon-comment.png" alt="" />
             </div>
             <div class="flex flex-col w-64 text-black 2xl:w-96">
-              <p
-                class="pb-[.9rem] 2xl:pb-4 text-[1.51rem] font-semibold tracking-tight"
+              <h2
+                class="pb-[.9rem] 2xl:pb-4 text-xl font-semibold tracking-tight"
               >
                 Abstract support
-              </p>
-              <p class="text-2xl 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
+              </h2>
+              <p class="text-lg 2xl:tracking-[.04rem] 2xl:text-[1.4rem]">
                 Get in touch with a human.
               </p>
               <div
@@ -508,7 +511,7 @@
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
-              d="M8.81232 0.000147151C1.78086 -0.0187525 0.0186013 1.77672 0.000143779 8.9766C-0.0183138 16.1765 1.73428 17.9809 8.76573 17.9999C15.7972 18.0187 17.5603 16.2233 17.5788 9.0234C17.5972 1.82352 15.8437 0.0190468 8.81232 0.000147151ZM7.34719 13.922C6.68167 13.922 6.03119 13.72 5.47788 13.3414C4.92461 12.9628 4.49336 12.4248 4.23869 11.7953C3.98405 11.1658 3.91742 10.473 4.04724 9.80474C4.17706 9.13644 4.4975 8.52264 4.96803 8.04074C5.43857 7.55892 6.03808 7.23082 6.69073 7.0979C7.34346 6.96501 8.01992 7.0332 8.6347 7.29396C9.24949 7.55474 9.77495 7.99632 10.1447 8.56282C10.5144 9.12938 10.7117 9.79553 10.7117 10.4769C10.7105 11.3902 10.3557 12.2658 9.72496 12.9116C9.09421 13.5575 8.23911 13.9208 7.34719 13.922ZM13.4584 13.7807H11.8103V5.90674H4.1197V4.21928H13.4584V13.7807Z"
+              d="M8.81232 0.000147151C1.78086 -0.0187525 0.0186013 1.77672 0.000143779 8.9766C-0.0183138 16.1765 1.73428 17.9809 8.76573 17.9999C15.7972 18.0187 17.5603 16.2233 17.5788 9.0234C17.5972 1.82352 15.8437 0.0190468 8.81232 0.000147151ZM7.34719 13.922C6.68167 13.922 6.03119 13.72 5.47788 13.3414C4.92461 12.9628 4.49336 12.4248 4.23869 11.7953C3.98405 11.1658 3.91742 10.473 4.04724 9.80474C4.17706 9.13644 4.4975 8.52264 4.96803 8.04074C5.43857 7.55892 6.03808 7.23082 6.69073 7.0979C7.34346 6.96501 8.01992 7.0332 8.6347 7.29396C9.24949 7.55474 9.77495 7.99632 10.1447 8.56282C10.5144 9.12938 10.7117 9.79553 10.7117 10.4769C10.7105 11.3902 10.3557 12.2658 9.72496 12.9116C9.09421 13.5575 8.23911 13.9208 7.34719 13.922ZM13.4584 13.7807h21.8103V5.90674H4.1197V4.21928h23.4584V13.7807Z"
               fill="white"
             />
             <path
