Update topics section icon sizes for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
         class="flex flex-col items-center justify-center bg-blue-100 px-16 pb-[8rem] pt-20 lg:px-[9.5rem] lg:pt-[7.8rem] xl:px-96 2xl:px-[19.7rem] 2xl:pb-[7.3rem] 2xl:pt-[7.75rem]"
       >
         <h1
-          class="trac text-4xl font-medium leading-10 tracking-[-.25rem] lg:text-[4.8rem] lg:tracking-tight xl:text-6xl 2xl:text-[4.8rem] 2xl:tracking-[-.15rem]"
+          class="text-4xl font-medium leading-10 tracking-[-.25rem] lg:text-[4.8rem] lg:tracking-tight xl:text-6xl 2xl:text-[4.8rem] 2xl:tracking-[-.15rem]"
         >
           How can we help?
         </h1>
@@ -200,7 +200,7 @@
           class="flex flex-col gap-20 lg:grid lg:grid-cols-2 2xl:grid 2xl:grid-cols-2"
         >
           <div class="flex flex-row">
-            <div class="mr-7 mt-1 w-[4.15rem] lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
               <img src="./assets/icon-versions.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-[25rem]">
@@ -228,7 +228,7 @@
             </div>
           </div>
           <div class="flex flex-row lg:mt-0 2xl:mt-0">
-            <div class="mr-7 mt-1 w-[4.15rem] lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
               <img src="./assets/icon-account.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-[24rem]">
@@ -254,7 +254,7 @@
             </div>
           </div>
           <div class="flex flex-row">
-            <div class="mr-7 mt-1 w-[4.15rem] lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
               <img src="./assets/icon-organizations.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-[25rem]">
@@ -280,7 +280,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-[4.3rem] lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
               <img src="./assets/icon-billing.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-[23rem]">
@@ -305,7 +305,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-[4.3rem] lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
               <img src="./assets/icon-authenticate.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-96">
@@ -330,7 +330,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-[4.3rem] lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
               <img src="./assets/icon-comment.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-96">
