Update footer spacing for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
               ></line>
             </svg>
           </div>
-          <div class="absolute top-[2.1rem] h-7 w-7">
+          <div class="hidden h-7 w-7">
             <svg
               id="menu-exit"
               class="hidden"
@@ -194,7 +194,7 @@
         </form>
       </section>
       <section
-        class="px-12 py-20 lg:px-28 lg:py-40 lg:pb-[7.5rem] 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
+        class="px-14 py-20 lg:px-28 lg:py-40 lg:pb-[7.5rem] 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
       >
         <div
           class="flex flex-col gap-20 lg:grid lg:grid-cols-2 2xl:grid 2xl:grid-cols-2"
@@ -357,7 +357,7 @@
         </div>
       </section>
     </main>
-    <footer class="grid grid-cols-2 bg-black-200 px-4 lg:px-20 2xl:px-24">
+    <footer class="grid grid-cols-2 bg-black-200 px-10 lg:px-20 2xl:px-24">
       <div
         class="hidden font-GT-America text-white lg:grid lg:w-[41.6rem] lg:grid-cols-5 2xl:grid 2xl:w-[55rem] 2xl:grid-cols-5"
       >
@@ -446,25 +446,16 @@
         </div>
       </div>
       <div
-        class="mt-10 w-64 text-white lg:mb-[3.75rem] lg:ml-[11.5rem] lg:mt-48 2xl:ml-[20.4rem] 2xl:mt-48"
+        class="mt-6 w-64 text-white lg:mb-[3.75rem] lg:ml-[11.5rem] lg:mt-48 2xl:ml-[20.4rem] 2xl:mt-48"
       >
-        <div class="h-9 w-9">
-          <svg
-            viewBox="0 0 18 18"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M8.81232 0.000147151C1.78086 -0.0187525 0.0186013 1.77672 0.000143779 8.9766C-0.0183138 16.1765 1.73428 17.9809 8.76573 17.9999C15.7972 18.0187 17.5603 16.2233 17.5788 9.0234C17.5972 1.82352 15.8437 0.0190468 8.81232 0.000147151ZM7.34719 13.922C6.68167 13.922 6.03119 13.72 5.47788 13.3414C4.92461 12.9628 4.49336 12.4248 4.23869 11.7953C3.98405 11.1658 3.91742 10.473 4.04724 9.80474C4.17706 9.13644 4.4975 8.52264 4.96803 8.04074C5.43857 7.55892 6.03808 7.23082 6.69073 7.0979C7.34346 6.96501 8.01992 7.0332 8.6347 7.29396C9.24949 7.55474 9.77495 7.99632 10.1447 8.56282C10.5144 9.12938 10.7117 9.79553 10.7117 10.4769C10.7105 11.3902 10.3557 12.2658 9.72496 12.9116C9.09421 13.5575 8.23911 13.9208 7.34719 13.922ZM13.4584 13.7807h21.8103V5.90674H4.1197V4.21928h23.4584V13.7807Z"
-              fill="white"
-            />
-            <path
-              d="M7.22452 8.64C6.86541 8.64 6.51441 8.74721 6.21582 8.94809C5.91723 9.1489 5.68454 9.43445 5.54712 9.76846C5.40971 10.1025 5.37372 10.47 5.4438 10.8246C5.51383 11.1792 5.68678 11.505 5.9407 11.7606C6.19461 12.0162 6.51811 12.1904 6.8703 12.2609C7.22249 12.3314 7.58758 12.2952 7.91932 12.1568C8.25107 12.0185 8.53465 11.7842 8.73415 11.4836C8.93364 11.183 9.04015 10.8295 9.04015 10.468C9.0396 9.98338 8.84819 9.51869 8.50782 9.17597C8.16745 8.83325 7.7059 8.6405 7.22452 8.64Z"
-              fill="white"
-            />
-          </svg>
-        </div>
-        <p class="mt-5 text-xl 2xl:mb-16 2xl:mt-4 2xl:font-medium">
+        <img
+          src="https://cdn.prod.website-files.com/5ff3926f03b3ba26b7d639cb/60c388bf3c3ae4d1d10653e7_Abstract_Wordmark-White.svg"
+          loading="lazy"
+          alt=""
+          class="mt-1 h-14 w-32 2xl:h-12 2xl:w-40"
+        />
+
+        <p class="mt-2 text-lg 2xl:mb-16 2xl:mt-4 2xl:font-medium">
           © Copyright 2024<br />
           Abstract Studio Design, Inc.<br />
           All rights reserved
