--- a/public/index.html
+++ b/public/index.html
@@ -191,10 +191,10 @@
         </form>
       </section>
       <section
-        class="px-14 py-20 lg:px-28 lg:py-40 lg:pb-[7.5rem] 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
+        class="px-14 py-20 md:px-16 lg:py-40 lg:pb-[7.5rem] 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
       >
         <div
-          class="flex flex-col gap-20 lg:grid lg:grid-cols-2 2xl:grid 2xl:grid-cols-2"
+          class="flex flex-col gap-20 md:grid md:grid-cols-2 2xl:grid 2xl:grid-cols-2"
         >
           <div class="flex flex-row">
             <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
