Update topics section icons for desktop

--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
           class="flex flex-col gap-20 md:grid md:grid-cols-2 2xl:grid 2xl:grid-cols-2"
         >
           <div class="flex flex-row">
-            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-versions.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-[25rem]">
@@ -225,7 +225,7 @@
             </div>
           </div>
           <div class="flex flex-row lg:mt-0 2xl:mt-0">
-            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-account.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-[24rem]">
@@ -251,7 +251,7 @@
             </div>
           </div>
           <div class="flex flex-row">
-            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-organizations.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-[25rem]">
@@ -277,7 +277,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-billing.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-[23rem]">
@@ -302,7 +302,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-authenticate.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-96">
@@ -327,7 +327,7 @@
             </div>
           </div>
           <div class="flex flex-row 2xl:w-[30rem]">
-            <div class="mr-7 mt-1 w-12 lg:w-[4.7rem] 2xl:w-[5.4rem]">
+            <div class="mr-7 mt-1 w-12 md:w-16 2xl:w-[5.4rem]">
               <img src="./assets/icon-comment.png" alt="" />
             </div>
             <div class="flex w-64 flex-col text-black 2xl:w-96">
