--- a/public/index.html
+++ b/public/index.html
@@ -354,55 +354,43 @@
         </div>
       </section>
     </main>
-    <footer class="grid grid-cols-2 bg-black-200 px-10 lg:px-20 2xl:px-24">
+    <footer
+      class="grid grid-rows-[auto,auto] bg-black-200 px-10 lg:px-20 2xl:px-24"
+    >
+      <div class="mt-6 w-64 2xl:ml-[20.4rem]">
+        <img
+          src="https://cdn.prod.website-files.com/5ff3926f03b3ba26b7d639cb/60c388bf3c3ae4d1d10653e7_Abstract_Wordmark-White.svg"
+          loading="lazy"
+          alt=""
+          class="mt-1 block h-14 w-32 md:h-16 md:w-40 2xl:h-12 2xl:w-40"
+        />
+      </div>
       <div
-        class="hidden font-GT-America text-white lg:grid lg:w-[41.6rem] lg:grid-cols-5 2xl:grid 2xl:w-[55rem] 2xl:grid-cols-5"
+        class="font-GT-America text-gray sm:hidden md:grid md:w-[41.6rem] md:grid-cols-5 2xl:grid 2xl:w-[55rem] 2xl:grid-cols-5"
       >
-        <div
-          class="mt-11 flex flex-col font-semibold lg:mt-12 lg:font-medium 2xl:font-medium"
-        >
-          <p
-            class="text-[1.51rem] lg:font-semibold 2xl:text-2xl 2xl:font-semibold"
-          >
-            Abstract
-          </p>
-          <a
-            class="mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
-            href="#"
-            >Start Trial</a
-          >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
-            >Pricing</a
-          >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
-            >Download</a
-          >
-        </div>
-        <div class="mt-11 flex flex-col">
+        <div class="mt-11 flex flex-col text-[1.08rem] text-base">
           <p class="text-[1.51rem] font-semibold 2xl:text-2xl">Resources</p>
+          <a class="mt-2 md:mt-3 2xl:mt-4" href="#">Blog</a>
+          <a href="#">Help Center</a>
+          <a text-xl href="#">Release Notes</a>
+          <a href="#">Status</a>
+        </div>
+        <div class="mt-11 flex flex-col">
+          <p class="text-[1.51rem] font-semibold 2xl:text-2xl">Company</p>
           <a
-            class="mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
+            class="hr-[1.08rem] mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
-            >Blog</a
+            >About Us</a
           >
           <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
-            >Help Center</a
+            >Careers</a
           >
-          <a
-            class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]"
-            text-xl
-            href="#"
-            >Release Notes</a
-          >
-          <a
-            class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]"
-            text-xl
-            href="#"
-            >Status</a
+          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+            >Legal</a
           >
         </div>
         <div class="mt-11 flex flex-col">
-          <p class="text-[1.51rem] font-semibold 2xl:text-2xl">Community</p>
+          <p class="text-[1.51rem] font-semibold 2xl:text-2xl">Social</p>
           <a
             class="mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
@@ -421,19 +409,9 @@
             >Podcast</a
           >
         </div>
-        <div class="mt-11 flex flex-col">
-          <p class="text-[1.51rem] font-semibold 2xl:text-2xl">Company</p>
-          <a
-            class="hr-[1.08rem] mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
-            href="#"
-            >About Us</a
-          >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
-            >Careers</a
-          >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
-            >Legal</a
-          >
+      </div>
+      <div class="flex flex-row text-gray md:pl-[8.4rem]">
+        <div class="md:mr-60">
           <p class="mt-7 text-[1.1rem] font-bold lg:text-base 2xl:text-base">
             Contact Us
           </p>
@@ -441,19 +419,11 @@
             >info@abstract.com</a
           >
         </div>
-      </div>
-      <div
-        class="mt-6 w-64 text-white lg:mb-[3.75rem] lg:ml-[11.5rem] lg:mt-48 2xl:ml-[20.4rem] 2xl:mt-48"
-      >
-        <img
-          src="https://cdn.prod.website-files.com/5ff3926f03b3ba26b7d639cb/60c388bf3c3ae4d1d10653e7_Abstract_Wordmark-White.svg"
-          loading="lazy"
-          alt=""
-          class="mt-1 h-14 w-32 2xl:h-12 2xl:w-40"
-        />
 
-        <p class="mt-2 text-lg 2xl:mb-16 2xl:mt-4 2xl:font-medium">
-          © Copyright 2024<br />
+        <p
+          class="mt-2 text-lg text-white md:text-xs md:font-bold 2xl:mb-16 2xl:mt-4 2xl:font-medium"
+        >
+          © Copyright 2022<br />
           Abstract Studio Design, Inc.<br />
           All rights reserved
         </p>
