Update footer text styles for tablets

--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,7 @@
                 Authenticate to Abstract
               </h2>
               <p class="text-lg 2xl:text-[1.4rem] 2xl:tracking-[.04rem]">
-                Set up an configure SSO, SCIM, and Just-in-Time provisioning.
+                Set up and configure SSO, SCIM, and Just-in-Time provisioning.
               </p>
               <div
                 class="mt-[1.2rem] flex flex-row items-center text-base font-semibold text-blue-200 lg:text-xl lg:font-normal 2xl:text-[1.2rem] 2xl:font-medium"
@@ -355,9 +355,9 @@
       </section>
     </main>
     <footer
-      class="grid grid-rows-[auto,auto] bg-black-200 px-10 lg:px-20 2xl:px-24"
+      class="grid grid-rows-[auto,auto] bg-black-200 px-10 md:px-8 2xl:px-24"
     >
-      <div class="mt-6 w-64 2xl:ml-[20.4rem]">
+      <div class="mt-6 w-64 md:mt-11 2xl:ml-[20.4rem]">
         <img
           src="https://cdn.prod.website-files.com/5ff3926f03b3ba26b7d639cb/60c388bf3c3ae4d1d10653e7_Abstract_Wordmark-White.svg"
           loading="lazy"
@@ -368,15 +368,22 @@
       <div
         class="font-GT-America text-gray sm:hidden md:grid md:w-[41.6rem] md:grid-cols-5 2xl:grid 2xl:w-[55rem] 2xl:grid-cols-5"
       >
-        <div class="mt-11 flex flex-col text-[1.08rem] text-base">
-          <p class="text-[1.51rem] font-semibold 2xl:text-2xl">Resources</p>
+        <div class="mt-11 flex flex-col text-[1.08rem] text-base md:mt-7">
+          <p class="text-2xl font-semibold text-white md:text-lg 2xl:text-2xl">
+            Resources
+          </p>
           <a class="mt-2 md:mt-3 2xl:mt-4" href="#">Blog</a>
           <a href="#">Help Center</a>
-          <a text-xl href="#">Release Notes</a>
+          <a href="#">Contact Support</a>
+          <a href="#">Release Notes</a>
           <a href="#">Status</a>
         </div>
-        <div class="mt-11 flex flex-col">
-          <p class="text-[1.51rem] font-semibold 2xl:text-2xl">Company</p>
+        <div class="mt-11 flex flex-col md:mt-7">
+          <p
+            class="text-[1.51rem] font-semibold text-white md:text-lg 2xl:text-2xl"
+          >
+            Company
+          </p>
           <a
             class="hr-[1.08rem] mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
@@ -388,9 +395,19 @@
           <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
             >Legal</a
           >
+          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+            >Privacy</a
+          >
+          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+            >Website Terms of Use</a
+          >
         </div>
-        <div class="mt-11 flex flex-col">
-          <p class="text-[1.51rem] font-semibold 2xl:text-2xl">Social</p>
+        <div class="mt-11 flex flex-col md:mt-6">
+          <p
+            class="text-[1.51rem] font-semibold text-white md:text-lg 2xl:text-2xl"
+          >
+            Social
+          </p>
           <a
             class="mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
@@ -405,14 +422,13 @@
           <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
             >Dribble</a
           >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
-            >Podcast</a
-          >
         </div>
       </div>
       <div class="flex flex-row text-gray md:pl-[8.4rem]">
         <div class="md:mr-60">
-          <p class="mt-7 text-[1.1rem] font-bold lg:text-base 2xl:text-base">
+          <p
+            class="mt-7 text-[1.1rem] font-bold text-white lg:text-base 2xl:text-base"
+          >
             Contact Us
           </p>
           <a class="text-[1.08rem] lg:text-base 2xl:text-sm" href="#"
@@ -429,6 +445,6 @@
         </p>
       </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
   </body>
 </html>
