--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
         </form>
       </section>
       <section
-        class="px-14 py-20 md:px-16 lg:py-40 lg:pb-[7.5rem] 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
+        class="px-14 py-20 md:px-16 md:py-28 lg:pb-[7.5rem] 2xl:px-[9.3rem] 2xl:pb-32 2xl:pt-40"
       >
         <div
           class="flex flex-col gap-20 md:grid md:grid-cols-2 2xl:grid 2xl:grid-cols-2"
@@ -355,7 +355,7 @@
       </section>
     </main>
     <footer
-      class="grid grid-rows-[auto,auto] bg-black-200 px-10 md:px-8 2xl:px-24"
+      class="grid grid-rows-[auto,auto] bg-black-200 px-10 pb-20 md:px-8 2xl:px-24"
     >
       <div class="mt-6 w-64 md:mt-11 2xl:ml-[20.4rem]">
         <img
@@ -366,17 +366,17 @@
         />
       </div>
       <div
-        class="font-GT-America text-gray sm:hidden md:grid md:w-[41.6rem] md:grid-cols-5 2xl:grid 2xl:w-[55rem] 2xl:grid-cols-5"
+        class="font-GT-America text-gray sm:hidden md:grid md:w-[41.6rem] md:grid-cols-4 2xl:grid 2xl:w-[55rem] 2xl:grid-cols-5"
       >
-        <div class="mt-11 flex flex-col text-[1.08rem] text-base md:mt-7">
+        <div class="mt-11 flex flex-col text-base md:mt-7">
           <p class="text-2xl font-semibold text-white md:text-lg 2xl:text-2xl">
             Resources
           </p>
-          <a class="mt-2 md:mt-3 2xl:mt-4" href="#">Blog</a>
-          <a href="#">Help Center</a>
-          <a href="#">Contact Support</a>
-          <a href="#">Release Notes</a>
-          <a href="#">Status</a>
+          <a class="mt-2 md:mb-1.5 md:mt-1 2xl:mt-4" href="#">Blog</a>
+          <a class="md:mb-1.5" href="#">Help Center</a>
+          <a class="md:mb-1.5" href="#">Contact Support</a>
+          <a class="md:mb-1.5" href="#">Release Notes</a>
+          <a class="md:mb-1.5" href="#">Status</a>
         </div>
         <div class="mt-11 flex flex-col md:mt-7">
           <p
@@ -385,64 +385,63 @@
             Company
           </p>
           <a
-            class="hr-[1.08rem] mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
+            class="hr-[1.08rem] mt-2 text-base md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
             >About Us</a
           >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
             >Careers</a
           >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
             >Legal</a
           >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
             >Privacy</a
           >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
-            >Website Terms of Use</a
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
+            >Terms of Use</a
           >
         </div>
-        <div class="mt-11 flex flex-col md:mt-6">
-          <p
-            class="text-[1.51rem] font-semibold text-white md:text-lg 2xl:text-2xl"
-          >
-            Social
-          </p>
+        <div class="mt-11 flex flex-col md:mt-7">
+          <p class="text-2xl font-semibold text-white md:text-lg">Social</p>
           <a
-            class="mt-2 text-[1.08rem] lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
+            class="mt-2 text-base md:mb-1.5 md:mt-1 lg:mt-3 lg:text-base 2xl:mt-4 2xl:text-[.97rem]"
             href="#"
             >Twitter</a
           >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
             >LinkedIn</a
           >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
             >Facebook</a
           >
-          <a class="text-[1.08rem] lg:text-base 2xl:text-[.97rem]" href="#"
+          <a class="text-base md:mb-1.5 lg:text-base 2xl:text-[.97rem]" href="#"
             >Dribble</a
           >
         </div>
       </div>
-      <div class="flex flex-row text-gray md:pl-[8.4rem]">
+      <div class="flex flex-row text-gray md:pl-[10.4rem]">
         <div class="md:mr-60">
           <p
-            class="mt-7 text-[1.1rem] font-bold text-white lg:text-base 2xl:text-base"
+            class="mt-1 text-lg font-bold text-white lg:text-base 2xl:text-base"
           >
             Contact Us
           </p>
-          <a class="text-[1.08rem] lg:text-base 2xl:text-sm" href="#"
+          <a class="text-base lg:text-base 2xl:text-sm" href="#"
             >info@abstract.com</a
           >
         </div>
-
-        <p
-          class="mt-2 text-lg text-white md:text-xs md:font-bold 2xl:mb-16 2xl:mt-4 2xl:font-medium"
-        >
-          © Copyright 2022<br />
-          Abstract Studio Design, Inc.<br />
-          All rights reserved
-        </p>
+        <div class="flex text-right">
+          <p
+            class="mt-2 text-lg text-white md:text-xs md:font-bold 2xl:mb-16 2xl:mt-4 2xl:font-medium"
+          >
+            © Copyright 2022
+            <br />
+            Abstract Studio Design, Inc.
+            <br />
+            All rights reserved
+          </p>
+        </div>
       </div>
     </footer>
     <script src="main.js" defer></script>
