--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body class="debug-screens h-screen font-GT-America">
     <header class="text-white">
       <nav
-        class="flex w-full items-center justify-center bg-black-200 px-5 py-4 lg:px-[3.8rem] lg:py-5 2xl:px-20 2xl:py-[1.18rem]"
+        class="flex w-full items-center justify-center bg-black-200 px-5 py-4 lg:px-[3.8rem] lg:py-5 xl:px-12 xl:py-4 2xl:px-20 2xl:py-[1.18rem]"
         id="navbar"
       >
         <ul class="mb-1 flex flex-row">
@@ -20,21 +20,21 @@
                 src="https://cdn.prod.website-files.com/5ff3926f03b3ba26b7d639cb/60c388bf3c3ae4d1d10653e7_Abstract_Wordmark-White.svg"
                 loading="lazy"
                 alt=""
-                class="mt-1 h-8 w-28 2xl:h-12 2xl:w-40"
+                class="mt-1 h-8 w-28 xl:mt-0 xl:h-11 xl:w-40 2xl:h-12 2xl:w-40"
               />
             </a>
           </li>
           <li class="flex items-center">
             <a
-              class="ml-1 mt-[.35rem] border-l-2 pl-2 text-xl font-medium lg:mr-[26rem] 2xl:mr-0 2xl:mt-[.3rem] 2xl:pl-5 2xl:text-3xl"
+              class="ml-1 mt-[.35rem] border-l-2 pl-2 text-xl font-medium xl:ml-4 xl:mr-96 xl:pl-4 xl:text-2xl 2xl:mr-0 2xl:mt-[.3rem] 2xl:text-3xl"
               href="./index.html"
               >Help Center</a
             >
           </li>
         </ul>
-        <button class="md:ml-80">
+        <button class="md:ml-80 xl:ml-64">
           <div
-            class="ml-20 mr-1 mt-1 size-8 lg:ml-32 lg:mr-1 lg:mt-3 2xl:hidden"
+            class="ml-20 mr-1 mt-1 size-8 lg:ml-32 lg:mr-1 lg:mt-3 xl:size-10 2xl:hidden"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -65,7 +65,7 @@
           </div>
         </button>
         <button id="menu-btn" onclick="toggleMenu()">
-          <div class="size-8" id="menu-open">
+          <div class="size-8 xl:size-10" id="menu-open">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="lg:mt-[.1rem] 2xl:hidden"
